Change state to install docker

--- a/ansible/playbooks/docker-install.yml
+++ b/ansible/playbooks/docker-install.yml
@@ -3,14 +3,14 @@
   tasks:
     - name: Update packages
       yum:
-        name: '*'
+        name: "*"
         state: latest
       become: true
 
     - name: Install Docker
       yum:
         name: docker
-        state: absent
+        state: present
       become: true
 
     - name: Start Docker service
