Change docker-compose shell command

--- a/ansible/playbooks/docker-run.yml
+++ b/ansible/playbooks/docker-run.yml
@@ -6,7 +6,7 @@
       args:
         chdir: /home/ec2-user
 
-    - name: Run docker-compose 
-      shell: docker-compose down -d
+    - name: Run docker-compose
+      shell: docker-compose up -d
       args:
         chdir: /home/ec2-user/devops-assessment
